@@ -9,5 +9,8 @@ PORTING
 Process/Makefile.PL
 Process/Process.pm
 hints/linux.pl
+hints/solaris.pl
 os/Linux.c
 os/Linux.h
+os/Solaris.c
+os/Solaris.h
