@@ -5,3 +5,6 @@ Revision history for Perl extension Proc::ProcessTable.
 
 0.03  Sun Jul 26 09:07:50 1998
 	- added argument to va_end to make linux-ppc work
+
+0,04  Fri Aug 14 22:51:31 1998
+        - preliminary pre-alpha solaris support
